force-app/main/default/objects/Vendor_Assignment__c/Vendor_Assignment__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Vendors to Events with agreed cost and scope</description>
    <label>Vendor Assignment</label>
    <nameField>
        <displayFormat>VA-{0000}</displayFormat>
        <label>Vendor Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>