force-app/main/default/objects/Vendor_Assignment__c/fields/Agreed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Cost__c</fullName>
    <description>Rolls up to Event.Est_Vendor_Spend__c via Roll-Up Summary</description>
    <label>Agreed Cost</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>