force-app/main/default/objects/Vendor_Assignment__c/fields/Performance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Performance_Notes__c</fullName>
    <description>Captured after vendor delivers</description>
    <label>Performance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>