force-app/main/default/objects/Vendor_Assignment__c/fields/Quality_Rating_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Quality_Rating_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>quality rating acknowledge checkbox check to save</description>
    <label>Quality Rating Acknowledged</label>
    <type>Checkbox</type>
</CustomField>