force-app/main/default/objects/Vendor_Assignment__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope Summary</label>
    <type>TextArea</type>
</CustomField>