force-app/main/default/objects/Vendor_Assignment__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Event Assignments</relationshipLabel>
    <relationshipName>Event_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>