force-app/main/default/objects/Vendor_Assignment__c/validationRules/Only_Approved_Vendors.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Approved_Vendors</fullName>
    <active>true</active>
    <description>Prevents assigning vendors that are not in Approved status to new events.</description>
    <errorConditionFormula>AND(
        ISNEW(),
        NOT(ISPICKVAL(Vendor__r.Status__c, &quot;Approved&quot;))
        )</errorConditionFormula>
    <errorDisplayField>Vendor__c</errorDisplayField>
    <errorMessage>Only vendors with Approved status can be assigned to events. This vendor is
        currently not Approved.</errorMessage>
</ValidationRule>