force-app/main/default/objects/Vendor_Assignment__c/validationRules/Vendor_Quality_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_Quality_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>And(
 Vendor__r.Quality_Rating__c &lt;3 ,
Not( Quality_Rating_Acknowledged__c )
)</errorConditionFormula>
    <errorMessage>To save make sure to acknowledge that vendor quality rating is less than 3</errorMessage>
</ValidationRule>